--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ header{
   background: lightgray;
 }
 h1, h2, h3{
-  font-family: 'Abel', sans-serif;
+  font-family: 'Exo 2', sans-serif;
 }
 header h1{
   font-size: 4em;
@@ -111,7 +111,7 @@ section#calculator button#clear{
 }
 footer{
   margin: 10px;
-  font-family: 'Abel', sans-serif;
+  font-family: 'Oxygen', sans-serif;
 }
 
 /* Mobile responsiveness */
