--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ header{
   margin: 0;
   padding: 10px 0 10px 0;
   background: lightgray;
+  position: relative;
 }
 h1, h2, h3{
   font-family: 'Exo 2', sans-serif;
@@ -70,6 +71,27 @@ header svg path:hover{
   font-family: 'Patrick Hand SC', cursive;
   font-size: 25px;
   line-height: 30px;
+}
+aside{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  text-align: left;
+}
+aside h4{
+  margin: 0;
+}
+aside table tbody{
+  line-height: .92em;
+}
+aside table tr td:first-child{
+  text-align: right;
+  padding-right: 4px;
+}
+aside table tr td:nth-child(2){
+  text-align: center;
+  font-weight: bold;
+  padding-right: 4px;
 }
 section{
   margin: 30px 0 30px 0;
