Header size shrunk for <=1280 screens

--- a/main.css
+++ b/main.css
@@ -182,6 +182,21 @@ footer{
   }
   header #mainChar{
     justify-content: left;
+    margin-top: 0;
+  }
+  header svg{
+    width: 200px;
+    height: 150px;
+  }
+  #help{
+    top: -30px;
+    right: -2px;
+    width: 260px;
+  }
+  #helpText{
+    padding: 5px;
+    font-size: 20px;
+    line-height: 25px;
   }
 }
 @media only screen and (max-width: 768px) {
