--- a/main.css
+++ b/main.css
@@ -198,6 +198,12 @@ footer{
     font-size: 20px;
     line-height: 25px;
   }
+  footer{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: left;
+  }
 }
 @media only screen and (max-width: 768px) {
   body{
