--- a/main.css
+++ b/main.css
@@ -227,6 +227,100 @@ section#visualization>div{
 .zero{
   background: radial-gradient(circle at 18px 18px, #eaeaea, #fff);
 }
+/* Transitions */
+.bloopIn{
+	animation-name: bloopIn;
+	-webkit-animation-name: bloopIn;
+	animation-duration: 0.3s;
+	-webkit-animation-duration: 0.3s;
+	animation-timing-function: ease-in-out;
+	-webkit-animation-timing-function: ease-in-out;
+	visibility: visible !important;
+}
+@keyframes bloopIn {
+	0% {
+		transform: scale(0);
+		opacity: 0.0;
+	}
+	60% {
+		transform: scale(1.1);
+	}
+	80% {
+		transform: scale(0.9);
+		opacity: 1;
+	}
+	100% {
+		transform: scale(1);
+		opacity: 1;
+	}
+}
+@-webkit-keyframes bloopIn {
+	0% {
+		-webkit-transform: scale(0);
+		opacity: 0.0;
+	}
+	60% {
+		-webkit-transform: scale(1.1);
+	}
+	80% {
+		-webkit-transform: scale(0.9);
+		opacity: 1;
+	}
+	100% {
+		-webkit-transform: scale(1);
+		opacity: 1;
+	}
+}
+.shake{
+	animation-name: shake;
+	-webkit-animation-name: shake;
+	animation-duration: 0.3s;
+	-webkit-animation-duration: 0.3s;
+}
+@keyframes shake {
+	0% {
+		transform: translate(0%, 0%);
+		opacity: 0.0;
+	}
+	20% {
+    transform: translate(-8%, -5%);
+	}
+	40% {
+    transform: translate(10%, 5%);
+	}
+  60% {
+    transform: translate(-10%, -5%);
+		opacity: 1;
+	}
+  80% {
+    transform: translate(8%, 4%);
+	}
+  100% {
+    transform: translate(0%, 0%);
+	}
+}
+@-webkit-keyframes shake {
+  0% {
+		transform: translate(0%, 0%);
+		opacity: 0.0;
+	}
+	20% {
+    transform: translate(-8%, 0%);
+	}
+	40% {
+    transform: translate(10%, 9%);
+	}
+  60% {
+    transform: translate(-10%, 10%);
+		opacity: 1;
+	}
+  80% {
+    transform: translate(80%, 9%);
+	}
+  100% {
+    transform: translate(0%, 0%);
+	}
+}
 
 /* Mobile responsiveness */
 @media only screen and (max-width: 1280px) and (min-width: 765px){
