--- a/main.css
+++ b/main.css
@@ -233,31 +233,27 @@ section#visualization>div{
   background: radial-gradient(circle at 18px 18px, #eaeaea, #fff);
 }
 /* Transitions */
-.bloopIn{
-	animation-name: bloopIn;
-	-webkit-animation-name: bloopIn;
-	animation-duration: 0.3s;
-	-webkit-animation-duration: 0.3s;
-	animation-timing-function: ease-in-out;
-	-webkit-animation-timing-function: ease-in-out;
-	visibility: visible !important;
+.getEatenUpLeft{
+  -webkit-animation-name: getEatenUpLeft;
+  animation-name: getEatenUpLeft;
+  -webkit-animation-duration: 0.5s;
+	animation-duration: 0.5s;
 }
-@keyframes bloopIn {
-	0% {
-		transform: scale(0);
-		opacity: 0.0;
-	}
-	60% {
-		transform: scale(1.1);
-	}
-	80% {
-		transform: scale(0.9);
-		opacity: 1;
-	}
-	100% {
-		transform: scale(1);
-		opacity: 1;
-	}
+@-webkit-keyframes getEatenUpLeft {
+	0%   {opacity: 1; transform: translate(0%,0%) scale(1);}
+	100% {opacity: 0; transform: translate(-500px,-400px) scale(0.05);}
+}
+@keyframes getEatenUpLeft {
+  0%   {opacity: 1; transform: translate(0%,0%) scale(1);}
+	100% {opacity: 0; transform: translate(-500px,-400px) scale(0.05);}
+}
+.bloopIn{
+	-webkit-animation-name: bloopIn;
+	animation-name: bloopIn;
+  -webkit-animation-duration: 0.3s;
+	animation-duration: 0.3s;
+  -webkit-animation-timing-function: ease-in-out;
+	animation-timing-function: ease-in-out;
 }
 @-webkit-keyframes bloopIn {
 	0% {
@@ -276,33 +272,28 @@ section#visualization>div{
 		opacity: 1;
 	}
 }
+@keyframes bloopIn {
+	0% {
+		transform: scale(0);
+		opacity: 0.0;
+	}
+	60% {
+		transform: scale(1.1);
+	}
+	80% {
+		transform: scale(0.9);
+		opacity: 1;
+	}
+	100% {
+		transform: scale(1);
+		opacity: 1;
+	}
+}
 .shake{
 	animation-name: shake;
 	-webkit-animation-name: shake;
 	animation-duration: 0.3s;
 	-webkit-animation-duration: 0.3s;
-}
-@keyframes shake {
-	0% {
-		transform: translate(0%, 0%);
-		opacity: 0.0;
-	}
-	20% {
-    transform: translate(-8%, -5%);
-	}
-	40% {
-    transform: translate(10%, 5%);
-	}
-  60% {
-    transform: translate(-10%, -5%);
-		opacity: 1;
-	}
-  80% {
-    transform: translate(8%, 4%);
-	}
-  100% {
-    transform: translate(0%, 0%);
-	}
 }
 @-webkit-keyframes shake {
   0% {
@@ -321,6 +312,28 @@ section#visualization>div{
 	}
   80% {
     transform: translate(80%, 9%);
+	}
+  100% {
+    transform: translate(0%, 0%);
+	}
+}
+@keyframes shake {
+	0% {
+		transform: translate(0%, 0%);
+		opacity: 0.0;
+	}
+	20% {
+    transform: translate(-8%, -5%);
+	}
+	40% {
+    transform: translate(10%, 5%);
+	}
+  60% {
+    transform: translate(-10%, -5%);
+		opacity: 1;
+	}
+  80% {
+    transform: translate(8%, 4%);
 	}
   100% {
     transform: translate(0%, 0%);
