--- a/main.css
+++ b/main.css
@@ -401,6 +401,22 @@ section#visualization>div{
 	50%  {opacity: 0.5; transform: translate(50%,-7%);}
 	100% {opacity: 1; transform: translate(0%,0%) scale(1);}
 }
+.shrink{  /*EXTRA?*/
+  -webkit-animation-name: shrink;
+  animation-name: shrink;
+  -webkit-animation-duration: 0.2s;
+	animation-duration: 0.2s;
+}
+@-webkit-keyframes shrink {
+	0%   {transform: scale(1);}
+	20%   {transform: scale(1.1);}
+	100% {transform: scale(.2);}
+}
+@keyframes receiveRight {
+  0%   {transform: scale(1);}
+	20%   {transform: scale(1.1);}
+	100% {transform: scale(.2);}
+}
 
 /* Mobile responsiveness */
 @media only screen and (max-width: 1280px) and (min-width: 765px){
