--- a/main.css
+++ b/main.css
@@ -412,7 +412,7 @@ section#visualization>div{
 	20%   {transform: scale(1.1);}
 	100% {transform: scale(.2);}
 }
-@keyframes receiveRight {
+@keyframes shrink {
   0%   {transform: scale(1);}
 	20%   {transform: scale(1.1);}
 	100% {transform: scale(.2);}
