--- a/main.css
+++ b/main.css
@@ -420,12 +420,6 @@ section#visualization>div{
 
 /* Mobile responsiveness */
 @media only screen and (max-width: 1280px) and (min-width: 765px){
-  section#calculator{
-    position: fixed;
-    margin: 0;
-    left: 20;
-    top: 20;
-  }
   header{
     padding: 10px 0 10px 450px;
     text-align: left;
@@ -448,11 +442,36 @@ section#visualization>div{
     font-size: 20px;
     line-height: 25px;
   }
+  section#calculator{
+    position: fixed;
+    margin: 0;
+    left: 20;
+    top: 20;
+    z-index: 3;
+  }
+  section#visualization{
+    margin: 10px;
+    top: 0;
+    justify-content: left;
+    padding-left: 400px;
+  }
+  section#visualization>div {
+    width: 50%;
+    min-height: 100px;
+    font-size: 8pt;
+  }
+  #visHistory{
+    padding-right: 5px;
+  }
+  #visResult{
+    padding-left: 5px;
+  }
   footer{
     position: absolute;
     bottom: 0;
     left: 0;
     text-align: left;
+    z-index: -1;
   }
 }
 @media only screen and (max-width: 1140px) and (min-width: 765px){
@@ -465,6 +484,11 @@ section#visualization>div{
   }
   header h2{
     font-size: 17px;
+  }
+}
+@media only screen and (max-width: 900px){
+  .collection div {
+    color: rgba(0,0,0,0);
   }
 }
 @media only screen and (max-width: 900px) and (min-width: 765px){
