Visualization works for addition, same signs, whole numbers

--- a/main.css
+++ b/main.css
@@ -212,6 +212,7 @@ section#visualization>div{
 .collection>div{
   margin:0.95%;
   transition: margin 0.2s;
+  position: relative;
 }
 .circle{
   display: flex;
